app/assets/stylesheets/app.scss
/* ... */
#sidebar {
  z-index: 1021;
}

@media (min-width: 767px) {
  #sidebar {
    z-index: 999;
  }
}

.ticket-type-description p {
  margin-bottom: 0;
}

.readable {
  font-size: 1rem;
  line-height: 1.5;
}

.read-more-toggle {
  font-size: 82.5%
}

#carousel-buttons-container {
  background: white;
}

.checkbox-inline label {
  cursor: pointer;
}

table.event-details td {
  font-size: 1.25em
}

.event-detail img {
  margin-top: 0.375em;
}

.event-detail:hover {
  background-color: $color_primary;
}

.event-detail:hover img {
  filter: invert(1);
  opacity: 1;
}

.event-detail.calendar-date:hover {
  color: white !important;
  text-decoration: none !important;
}

.event-detail.calendar-date .day {
  padding: 0.1em;
}

.select-placeholder {
  color: $placeholder_grey !important;
}

.navbar-xs-justified {
  border: 0 !important
}

div.block-title.map-event {
  margin-bottom: 0.5rem !important;
}

div.block-title.map-event h4 {
  font-size: 1.1rem !important;
  display: inline-block !important;
  margin-bottom: 0 !important;
}

ul.map-event li {
  font-size: 0.85rem !important
}

#calendar a.fc-event {
  color: $color_highlight_1 !important;
}

.fc-button {
  background-color: transparent !important;
  border-color: $calendar_grey !important;
  color: $calendar_grey !important;
}

.fc-button:hover {
  background-color: $calendar_grey !important;
  border-color: $calendar_grey !important;
  color: white !important;
}

.fc-button-active {
  background-color: $calendar_grey !important;
  border-color: $calendar_grey !important;
  color: white !important;
}

body.gradient,
body.gradient #content {
  background:
    linear-gradient(135deg, $color_highlight_1_light_3 0%, $color_paper 50%),
}

.gradient {
  background:
    linear-gradient(135deg, $color_highlight_1_light_3 0%, $color_paper 50%),
    linear-gradient(to bottom, transparent 80%, white 100%);
  background-blend-mode: lighten;
}

.content-padding-x {
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;
}

.content-padding-top {
  padding-top: 0.9375rem;
}

@media(min-width: 768px) {
  .content-padding-x {
    padding-left: 1.5625rem;
    padding-right: 1.5625rem;
  }

  .content-padding-top {
    padding-top: 1.5625rem;
  }
}

body.greyed,
body.greyed #content {
  background-color: $color_superlight;
}

.invalid-feedback {
  display: block;
}

.slick-placeholder h2 {
  color: #E8E8E8;
}

.slick-placeholder img {
  background: #E8E8E8;
}

#header {
  background: linear-gradient(45deg, #222 0%, #222 66%, $color_highlight_1 100%) !important;
}

.ai-well {
  background: linear-gradient(135deg, $color_highlight_1_light_1 0%, $color_highlight_1_light_1 50%, $color_highlight_1_light_2 100%) !important;
  padding: 1rem;
  border-radius: 0.5rem;
}

table.dataTable.table-sm>thead>tr>th {
  background: white
}

.select2-choices {
  box-shadow: none !important;
}

.select2-container-multi .select2-choices .select2-search-choice {
  margin-top: 5px
}

.lookup .select2-choice {
  height: 32px !important;
  line-height: 32px !important;
}

.bg-primary.text-white,
.progress-bar {
  background: linear-gradient(135deg, $color_primary 0%, $color_primary 50%, $color_primary_light 100%) !important;
  border: none !important;
}

.card-header.chill {
  background: white !important;
  color: #212529 !important;
  border: none !important;
  position: relative;
}

.card-header.chill::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 15px;
  right: 15px;
  height: 1px;
  background-color: rgba(0, 0, 0, 0.1);
}

.newsfeed-icon {
  font-size: 16px;
  color: $color_primary;
  background-color: $color_primary_transparent_1;
  width: 2.25em;
  height: 2.25em;
}

.newsfeed-icon .bi-ticket-detailed-fill {
  position: relative;
  top: -1px;
}

a.btn-outline-danger:focus {
  color: $color_danger;
}

@media(min-width: 576px) {
  form.form-inline input.datepicker {
    width: 10em !important
  }
}

a.ui-menu-item-wrapper {
  display: block;
  text-decoration: none
}

a.ui-menu-item-wrapper:focus,
a.ui-menu-item-wrapper:hover {
  color: #333
}

.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
a.ui-button:active,
.ui-button:active,
.ui-button.ui-state-active:hover {
  font-weight: inherit
}

.ck-heading_paragraph_lead {
  font-size: 0.85rem !important
}

a.text-primary:hover,
a.text-primary:focus {
  color: $color_primary_hover !important
}

ul.pagination {
  justify-content: center;
}

.shorturl {
  display: inline;
  height: auto;
  width: 15em;
  border: 0;
  border-radius: 0;
  border-bottom: 1px dotted #C8C7CC;
  padding: 0;
  padding-left: 0.375rem
}

.shorturl:focus {
  outline: none;
  box-shadow: none;
  -webkit-box-shadow: none
}

.shorturl+a {
  color: $body_text
}

.grecaptcha-badge {
  visibility: hidden;
}

.no-spinner .bi.bi-spin {
  display: none
}

mark,
.highlight {
  padding-left: 0;
  padding-right: 0;
  background-color: #FDFFAA
}

.dropdown-menu>li.notification .notification-info,
.dropdown-menu>li.notification .notification-title,
.dropdown-menu>li.notification .notification-desc {
  white-space: normal;
  line-height: 1.35
}


a.bg-primary:hover,
a.bg-primary:focus,
button.bg-primary:hover,
button.bg-primary:focus,
.bg-primary-hover {
  background-color: $color_primary_hover !important
}

.flatpickr-day.selected,
.flatpickr-day.startRange,
.flatpickr-day.endRange,
.flatpickr-day.selected.inRange,
.flatpickr-day.startRange.inRange,
.flatpickr-day.endRange.inRange,
.flatpickr-day.selected:focus,
.flatpickr-day.startRange:focus,
.flatpickr-day.endRange:focus,
.flatpickr-day.selected:hover,
.flatpickr-day.startRange:hover,
.flatpickr-day.endRange:hover,
.flatpickr-day.selected.prevMonthDay,
.flatpickr-day.startRange.prevMonthDay,
.flatpickr-day.endRange.prevMonthDay,
.flatpickr-day.selected.nextMonthDay,
.flatpickr-day.startRange.nextMonthDay,
.flatpickr-day.endRange.nextMonthDay {
  background: $color_primary;
  border-color: $color_primary
}

body[contenteditable] {
  background: white
}
/* ... */

